<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Cobi</string>
    <string name="isFile">This is File</string>
    <string name="noPermission">No Permission</string>
    
    <string name="rename_renameAlertTitle">Rename File</string>
    <string name="rename_renameFileCancel">Rename cancel</string>
    <string name="rename_fileAlreadyExist"> is already exist, choose other name.</string>
    <string name="rename_renameFileSucceed">Rename file succeed.</string>
    <string name="rename_renameFileFailure">Rename file failure.</string>
    
    <string name="move_replaceSucceed">Replace file succeed</string>
    <string name="move_replaceFailure">Replace file failure</string>
    <string name="move_moveFileSucceed">Move file succeed</string>
    <string name="move_moveFileFailure">Move file failure</string>
    <string name="move_moveFileCancel">Move File Cancel</string>
    <string name="move_fileAlreadyExist">This file is already.</string>
    
    <string name="copy_fileSameName">Already have this file.</string>
	<string name="copy_copyDataSucceed">Copy file succeed.</string>
    <string name="copy_copyDataFailure">Copy file error.</string>
    
    <string name="delete_alertTitle">Delete File</string>
    <string name="delete_alertDeleteFileMsg">The file will removed forever.</string>
    <string name="delete_alertDeleteDirMsg">All file in this directory will also be deleted.</string>
    <string name="delete_deleteButton">Delete</string>
    <string name="delete_deleteDataSucceed"> deleted succeed.</string>
    <string name="delete_deleteDataFailure"> deleted failure.</string>
    
    <string name="alertButton_yes">Yes</string>
   	<string name="alertButton_no">No</string>
    <string name="alert_waitingDialogTitle">Please wait...</string>
    <string name="alertButton_ok">OK</string>
    <string name="alertButton_cancel">Cancel</string>
    <string name="action_cancel">Cancel</string>
    
    <string name="exitDialog_title">Exit Cobi?</string>
    <string name="exitDialog_exitButtonText">Yes</string>
    <string name="exitDialog_unexitButtonText">No</string>
  
    <string name="menu_createDirectory">Create new directory</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_showInfo">Show info</string>
    <string name="menu_moveToOtherSide">Move to other side</string>
    <string name="menu_copyToOtherSide">Copy to other side</string>
    <string name="menu_delete">delete</string>
    <string name="menu_search">Search File</string>
    <string name="menu_helpTitle">HELP</string>
    <string name="menu_aboutTitle">About....</string>
    <string name="menu_finish">Exit Cobi</string>
    <string name="menu_createNewDirInTop">Create new directory in TOP.</string>
    <string name="menu_createNewDirInBottom">Create new directory at BOTTOM.</string>
    
    <string name="createDir_createNewDirectory">New directory</string>
    <string name="createDir_createDirCancel">Create directory cancel</string>
    <string name="createDir_createDirSucceed">Create directory succeed</string>
    <string name="createDir_createDirFailure">Create directory failure</string>
    
    <string name="search_activity_title">Search File</string>
    <string name="search_no_text">Please enter file name</string>
    <string name="search_input_hint">Enter Keyword Here</string>
    
    <string name="help_title">HELP</string>
    <string name="help_msg">    Open two directories in the same time, one at TOP screen and the other one at BOTTOM.\n    Click directory/file to open it.\n    Click opened directory to upper layer.\n    Long click the directory to manage it. Long click file can open it directly.\n You can find search function in menu or press search button.\n</string>
    
    <string name="about_title">About....</string>
    <string name="about_msg">Write by:\n<b>cha122977</b> &amp; <b>Yu</b>\ncha122977@gmail.com\nyustudiotw@gmail.com\nhttp://yustudio.tw/\n</string>
    <string name="about_copyRight">CopyRight</string>
    <string name="clickAgainToExist">Click again to finish</string>
    
    <string name="fileInfo_containingFileNumber">Containing File Number: </string>
    <string name="fileInfo_size">Size: </string>
    <string name="fileInfo_lastModify">Last Modified: </string>
    <string name="fileInfo_unit_byte"> Bytes</string>
    <string name="fileInfo_unit_kByte"> KBytes</string>
    <string name="fileInfo_unit_mByte"> MBytes</string>
    <string name="fileInfo_unit_gByte"> GBytes</string>
    
    <string name="fileCannotRead">Cannot read this file.</string>
    <string name="fileDoesNotExists">File does not exist.</string>
    
	<!-- use in Long Click List View Item function -->
    <string-array name="alert_fileSelectedOption">
        <item>Open </item>
        <item>Rename</item>
        <item>Show information</item>
        <item>Move to: </item>
        <item>Copy to: </item>
        <item>Delete</item>
        <item>Cancel</item>
    </string-array>
    
    <!-- use when copy file and target directory have same name file -->
    <string-array name="alert_sameFileNameOption">
        <item>Replace </item>
        <item>Copied file rename as </item>
        <item>Cancel copy</item>
    </string-array>
    
	<!-- use when move file and target directory have same name file -->
    <string-array name="alert_moveFileSameName">
        <item>Replace it</item>
        <item>Cancel</item>
    </string-array>
    
    <!--  use in SearchActivity to maintain user option when clicked one is directory -->
    <string-array name="alert_searchListDirectoryOption">
        <item>Show in Top Window</item>
        <item>Show in Bottom Window</item>
        <item>Show information</item>
        <item>Delete</item>
        <item>Cancel</item>
    </string-array>
    
    <!--  use in SearchActivity to maintain user option when clicked one is file-->
    <string-array name="alert_searchListFileOption">
        <item>Open</item>
        <item>Show in Top Window</item>
        <item>Show in Bottom Window</item>
        <item>Show information</item>
        <item>Delete</item>
        <item>Cancel</item>
    </string-array>
</resources>